fix logo button - css fixes

--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a routerLink="/" class="logo">Nik - Food!</a>
+        <a href="#" routerLink="/" class="logo">Nik - Food!</a>
         <nav>
             <ul>
                 <li>
