--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -15,7 +15,7 @@
                     </div>
                 </li>
                 <li>
-                    <a routerLink="/cart-page">
+                    <a href="/cart-page" routerLink="/cart-page">
                         Cart <span *ngIf="cartQuantity">{{cartQuantity}}</span>
                     </a>
                 </li>
